# literator

./: .env.template  .gitignore  README.md  api_clients.py  config.py  db_handler.py  fetcher.py  litreview.py  models.py  pyproject.toml  scopus_client.py
literator/: __init__.py  config.py  core.py
literator/api/: __init__.py  base.py
literator/cli/: __init__.py  base.py  cli.py
literator/db/: __init__.py  handler.py
literator/display/: __init__.py  console.py  display.py
literator/utils/: __init__.py  errors.py  functions.py  logging.py  types.py
src/literator/: __init__.py  config.py  core.py
src/literator/api/: __init__.py  base.py  scopus.py
src/literator/db/: models.py
